[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/gui/Camera.gd" type="Script" id=1]
[ext_resource path="res://Asset/UI/highlight-line.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/GUI.tscn" type="PackedScene" id=3]

[node name="Camera" type="Camera2D"]
position = Vector2( 640, 360 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
script = ExtResource( 1 )

[node name="Progress1" type="Sprite" parent="."]
scale = Vector2( 40, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )

[node name="Progress2" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 22.5, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )

[node name="Progress3" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 40, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )

[node name="Progress4" type="Sprite" parent="."]
rotation = 4.71239
scale = Vector2( 22.5, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]
text_color = Color( 0, 0, 0, 1 )
